--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
           python -m build
 
       - name: Publish to PyPI
-        uses:  pypa/gh-action-pypi-publish@v1
+        uses:  pypa/gh-action-pypi-publish@release/v1
         with:
           skip-existing: true
 
