--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ pyperclip>=1.8.2
 platformdirs>=3.9.0
 plyer>=2.1.0
 termcolor>=2.3.0
+requests>=2.28.1
+flask>=2.2.2
+openai>=0.27.0
+argcomplete>=2.0.0
