--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "alterclip"
-version = "0.3.0"
+version = "0.3.1"
 description = "Herramienta para interceptar URLs desde el portapapeles y modificarlas o reproducirlas"
 authors = [{ name="Julio Serrano", email="mhysterio@gmail.com" }]
 readme = "README.md"
-license = {text = "GPL-3.0-only"}
+license = "GPL-3.0-only"
 requires-python = ">=3.8"
 dependencies = [
     "pyperclip",
